[gd_scene load_steps=12 format=3 uid="uid://g1hmpj4ghbke"]

[ext_resource type="Script" path="res://scripts/battle_unit_scene.gd" id="1_k00rm"]
[ext_resource type="PackedScene" uid="uid://cvmpj5n7cvrec" path="res://scenes/components/health_component.tscn" id="2_7xxjy"]
[ext_resource type="Texture2D" uid="uid://by50o11reaub1" path="res://Sprites/TEMP/SSC MONARCH.png" id="3_smeih"]
[ext_resource type="Texture2D" uid="uid://cw5mtp6qf3vx8" path="res://Sprites/TEMP/hand_only.png" id="5_1313j"]
[ext_resource type="PackedScene" uid="uid://cglivrp1c321m" path="res://scenes/components/mech_body_component.tscn" id="6_8qryk"]
[ext_resource type="PackedScene" uid="uid://cvtuxrhjy23ib" path="res://scenes/battle_menu.tscn" id="7_1vv7i"]
[ext_resource type="PackedScene" uid="uid://h0ukpxk0ltan" path="res://scenes/components/arm_component.tscn" id="8_q8mji"]
[ext_resource type="PackedScene" uid="uid://6q18igs0rq7x" path="res://scenes/components/lower_body_component.tscn" id="9_gr5mx"]
[ext_resource type="PackedScene" uid="uid://b167a5lvnxcp2" path="res://scenes/components/upper_body_component.tscn" id="10_bdhmb"]
[ext_resource type="PackedScene" uid="uid://br2ee6od7ur16" path="res://scenes/components/target_component.tscn" id="10_n0jd6"]
[ext_resource type="PackedScene" uid="uid://3yf7ibnshh7o" path="res://scenes/components/head_component.tscn" id="11_rbodc"]

[node name="BattleUnitScene" type="Node2D" node_paths=PackedStringArray("health_component", "mech_body_component", "unit_controller")]
script = ExtResource("1_k00rm")
health_component = NodePath("HealthComponent")
mech_body_component = NodePath("MechBodyComponent")
unit_controller = NodePath("BattleMenu")

[node name="HealthComponent" parent="." instance=ExtResource("2_7xxjy")]
position = Vector2(-56, -203)

[node name="SscMonarch" type="Sprite2D" parent="."]
position = Vector2(1, 18)
scale = Vector2(0.496591, 0.496591)
texture = ExtResource("3_smeih")

[node name="TurnSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -288)
rotation = 3.14048
scale = Vector2(1.85593, 1.85593)
texture = ExtResource("5_1313j")
hframes = 14

[node name="BattleMenu" parent="." instance=ExtResource("7_1vv7i")]
offset_left = -106.0
offset_top = 216.0
offset_right = -106.0
offset_bottom = 216.0

[node name="MechBodyComponent" parent="." node_paths=PackedStringArray("head_component", "upper_body_component", "right_arm_component", "left_arm_component", "lower_body_component") instance=ExtResource("6_8qryk")]
head_component = NodePath("../HeadComponent")
upper_body_component = NodePath("../UpperBodyComponent")
right_arm_component = NodePath("../ArmComponent")
left_arm_component = NodePath("../ArmComponent")
lower_body_component = NodePath("../LowerBodyComponent")

[node name="ArmComponent" parent="." instance=ExtResource("8_q8mji")]

[node name="HeadComponent" parent="." instance=ExtResource("11_rbodc")]

[node name="LowerBodyComponent" parent="." instance=ExtResource("9_gr5mx")]

[node name="TargetComponent" parent="." instance=ExtResource("10_n0jd6")]

[node name="UpperBodyComponent" parent="." instance=ExtResource("10_bdhmb")]

[connection signal="health_depleted" from="HealthComponent" to="." method="_on_health_component_health_depleted"]
[connection signal="action_and_target_selected" from="BattleMenu" to="." method="_on_battle_menu_action_and_target_selected"]
[connection signal="sub_actions_requested" from="BattleMenu" to="." method="_on_battle_menu_sub_actions_requested"]
